refactor code, prepare it for storage support
also test code on both min Go version supported (v1.13 currently)
as well as max supported (v1.17 currently)

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,7 +8,23 @@ on:
 
 jobs:
 
-  build:
+  build-go-ver-min:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.13
+
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./...
+
+  build-go-ver-max:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
