fix spelling error in feature.yml

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -57,13 +57,17 @@ body:
     id: logs
     attributes:
       label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      description: |
+        Please copy and paste any relevant log output.
+        This will be automatically formatted into code, so no need for backticks.
       render: shell
   - type: checkboxes
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/OTA-Insight/bqwriter/blob/main/CONTRIBUTING.md#contributor-code-of-conduct
+      description: |
+        By submitting this issue, you agree to follow our
+        [Code of Conduct](https://github.com/OTA-Insight/bqwriter/blob/main/CONTRIBUTING.md#contributor-code-of-conduct)
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
