--- a/.github/ISSUE_TEMPLATE/proposal.yml
+++ b/.github/ISSUE_TEMPLATE/proposal.yml
@@ -63,7 +63,7 @@ body:
   - type: dropdown
     id: platforms
     attributes:
-      label: What platform are you mostly using planning to use our software on?
+      label: What platform are you mostly using or planning to use our software on?
       multiple: true
       options:
         - Windows
@@ -75,7 +75,9 @@ body:
     id: terms
     attributes:
       label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/OTA-Insight/bqwriter/blob/main/CONTRIBUTING.md#contributor-code-of-conduct
+      description: |
+        By submitting this issue, you agree to follow our
+        [Code of Conduct](https://github.com/OTA-Insight/bqwriter/blob/main/CONTRIBUTING.md#contributor-code-of-conduct)
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
